# procmon-oprs

./: .gitignore  CHANGELOG.md  Cargo.toml  ChangeLog  README.md  changes.txt  cliff.toml  release.toml
src/: agg.rs  application.rs  cfg.rs  clock.rs  collector.rs  collectors.rs  format.rs  info.rs  main.rs  metric.rs  metrics.rs  parsers.rs  proc_dir.rs  process.rs  sighdr.rs  targets.rs  utils.rs
src/console/: charset.rs  input.rs  mod.rs  output.rs  theme.rs  themes.rs
src/display/: mod.rs  null.rs  term.rs  text.rs
src/display/term/: device.rs  help_en.md  input.rs  menu.rs  mod.rs  panes.rs  sizer.rs  table.rs  tables.rs  types.rs
src/export/: csv.rs  mod.rs  rrd.rs  rrdtool.rs
src/metrics/: mod.rs  parser.rs
src/mocks/: fs.rs  procfs.rs
src/output/: mod.rs  text.rs
src/output/term/: charset.rs  input.rs  menu.rs  mod.rs  output.rs  sizer.rs  table.rs  widget.rs
src/process/: agg.rs  collector.rs  forest.rs  format.rs  interpreters.rs  managers.rs  matchers.rs  metrics.rs  mod.rs  parsers.rs  stat.rs  targets.rs
src/process/mocks/: fs.rs  mod.rs  procfs.rs
