[package]
name = "procmon-oprs"
version = "0.18.5"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
description = "A process monitor for Linux"
readme = "README.md"
homepage = "https://github.com/lparcq/procmon-oprs"
keywords = ["proc", "linux", "process", "monitor"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "oprs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argh = "0.1"
chrono = "0.4"
console = "0"
ctrlc = { version = "3.0", features = ["termination"] }
indextree = "4"
itertools = "0.13"
libc = "0.2"
light-ini = "0.3"
log = "0"
memchr = "2"
nom = "7"
procfs = "0.17"
simplelog = "0.12"
strum = "0.26"
strum_macros = "0.26"
termion = "4"
ratatui = { version = "0.28", default-features = false, features = ["termion"] }
thiserror = "1.0"
xdg = "2"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
strip = true
codegen-units = 1
