[package]
name = "procmon-oprs"
version = "0.38.0"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
description = "A process monitor for Linux"
readme = "README.md"
homepage = "https://github.com/lparcq/procmon-oprs"
keywords = ["proc", "linux", "process", "monitor"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "oprs"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:num-traits", "dep:ratatui", "dep:supports-color", "dep:terminal-colorsaurus", "dep:termion"]

[dependencies]
anyhow = "1"
argh = "0.1"
chrono = "0.4"
console = "0"
ctrlc = { version = "3.0", features = ["termination"] }
getset = "0.1"
globset = "0.4"
indextree = "4"
itertools = "0.14"
libc = "0.2"
light-ini = "0.3"
log = "0"
memchr = "2"
nom = "8"
num-traits = { version = "0.2", optional = true }
procfs = "0.17"
ratatui = { version = "0.29", default-features = false, features = ["termion"], optional = true }
simplelog = "0.12"
smart-default = "0.7"
strum = { version = "0.27", features = ["derive"] }
supports-color = { version = "3", optional = true }
terminal-colorsaurus = { version = "0.4", optional = true }
termion = { version = "4", optional = true }
thiserror = "2"
xdg = "2"

[dev-dependencies]
rand = "0.9"
rstest = "0.24"

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
strip = true
codegen-units = 1
